testsuite/tests/linear/should_fail/LinearKind.stderr

LinearKind.hs:4:1: error: [GHC-13218]
    • Illegal linear function in a kind: * %1 -> *
    • In the data type declaration for ‘A’
